tests/baselines/reference/functionCall6.errors.txt
==== tests/cases/compiler/functionCall6.ts (3 errors) ====
    function foo(a:string){}; 
    foo('bar');
    foo(2);
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo('foo', 'bar');
    ~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo();
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    